# cob_hardware_test

./: .travis.rosinstall  .travis.rosinstall.melodic  .travis.yml  README_nuc.md
cob_bringup_test/: CHANGELOG.rst  package.xml
cob_devices_test/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cob_devices_test/scripts/: plot_thermal_test.py  run_thermal_test.py
cob_hardware_test/: CHANGELOG.rst  package.xml
cob_hardware_test_core/: CHANGELOG.rst  package.xml
cob_test_rigs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cob_test_rigs/config/: cam3d_d435.rviz
cob_test_rigs/launch/: arm.launch  arm_pg70.launch  cam3d_d435_rviz.launch  component.xml  fdm.launch  head3.launch  pg70.launch  sensorring.launch  single_elmo.launch  single_nanotec.launch  single_schunk.launch  torso2.launch  torso3.launch
cob_test_rigs/launch/controllers/: generic_controller.launch
cob_test_rigs/launch/drivers/: canopen_402.launch
cob_test_rigs/robots/arm/config/: arm_configurations.yaml  arm_driver.yaml
cob_test_rigs/robots/arm/urdf/: arm.urdf.xacro
cob_test_rigs/robots/arm_pg70/urdf/: arm_pg70.urdf.xacro
cob_test_rigs/robots/common/: NP5-08.dcf  NP5-08.eds  diagnostics_analyzers.yaml
cob_test_rigs/robots/fdm/urdf/: fdm.urdf.xacro
cob_test_rigs/robots/pg70/config/: pg70_configurations.yaml  pg70_controller.yaml  pg70_driver.yaml
cob_test_rigs/robots/pg70/urdf/: pg70.urdf.xacro
cob_test_rigs/robots/single/config/: single_nanotec_driver.yaml
cob_test_rigs/robots/single/urdf/: single.urdf.xacro
cob_test_rigs/robots/torso3/config/: torso3_configurations.yaml  torso3_controller.yaml  torso3_driver.yaml
cob_test_rigs/robots/torso3/urdf/: torso3.urdf.xacro
cob_test_rigs/scripts/: test_components.py
