<?xml version="1.0"?>
<package format="2">
  <name>cob_test_rigs</name>
  <version>0.1.7</version>
  <description>The cob_test_rigs package</description>

  <maintainer email="fmw@todo.todo">fmw</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>canopen_chain_node</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>cob_control_mode_adapter</exec_depend>
  <exec_depend>cob_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
